--- a/crm.html
+++ b/crm.html
@@ -42,7 +42,7 @@
                         <option value="usuario">Usuario</option>
                         <option value="agente">adminitrador</option>
                     </select>
-                    <input type="text" id="reg-inmueble" placeholder="Inmueble (Apto/Casa)" class="p-2 border rounded">
+                    <input type="text" id="reg-inmueble" placeholder="Inmueble (torre/Apto/Casa)" class="p-2 border rounded">
                 </div>
 
                 <input type="password" id="reg-pass" placeholder="Contraseña" class="w-full p-2 border rounded">
