--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="bg-blue-600 text-white py-16 text-center border-b-8 border-blue-800">
         <div class="max-w-4xl mx-auto px-4">
             <h2 class="text-4xl font-extrabold mb-4">Cartelera Digital de la Copropiedad</h2>
-            <p class="text-xl text-blue-100">Mantente informado sobre los últimos comunicados, mantenimientos y eventos de nuestro conjunto residencial.</p>
+            <p class="text-xl text-blue-100">Accede a comunicados, notificaciones de mantenimiento y eventos del conjunto residencial de forma clara, centralizada y actualizada</p>
         </div>
     </header>
 
@@ -56,8 +56,8 @@
                     <p class="text-gray-300 text-sm">Completa el formulario para apartar tu turno. Recuerda cumplir el reglamento.</p>
                 </div>
                 <div class="md:w-2/3 p-0 min-h-[500px]">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfozaxsLL2QqfQ6OM7_YUrrcK8XYTmHt9evLMBqmfDdaZoJWA/viewform?usp=publish-editor" 
-                            width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" class="w-full h-full min-h-[500px]">
+                    <iframe id="iframe-gimnasio" src="" 
+                        width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" class="w-full h-full min-h-[500px]">
                         Cargando formulario...
                     </iframe>
                 </div>
